Bug 1152098 - Ignore subsequent toggling requests if toggling is already in progress. r=btian